fix ui cart on mobile

--- a/src/css/checkout/Checkout.css
+++ b/src/css/checkout/Checkout.css
@@ -273,6 +273,10 @@
     row-gap: 2.5rem;
   }
 
+  .cart-item .button-container {
+    height: fit-content;
+  }
+
   .billing-container .icon {
     left: -2%;
   }
